@@ -1,6 +1,10 @@
                                                                 -*- outline -*-
 * Class HierarchicalIterative
-  - a bug in right hand side getter by constraint has been fixed.
+  - a bug in right hand side getter by constraint has been fixed,
+  - a getter to numerical constraints has been added. It returns the implicit
+    and explicit constraints,
+  - a method computing whether a solver solution manifold is a submanifold of
+    another solver solution manifold has been added.
 * Class Implicit has been cleaned up
   - methods setting and getting the right hand side are not deprecated anymore,
   - deprecated methods have been remove.
